TAG: vega_ensemblseqload-6-0-3-1
DATE: 03/03/2016
STAFF: lec 
CHANGES: 
1) TR12221/VEGA 64

TAG: vega_ensemblseqload-6-0-2-1
TAG: vega_ensemblseqload-tr12070-1
DATE: 12/02/2015
STAFF: lec 
CHANGES: 
move SEQ_RELEASE_DATE to genemodelload/configs
a) ensembl_proteinseqload.config 
b) ensembl_transcriptseqload.config 
c) vega_proteinseqload.config 
d) vega_transcriptseqload.config

TAG: vega_ensemblseqload-6-0-1-1
DATE: 11/30/2015
STAFF: dbm
CHANGES: TR11904 & TR12199
1) common.config.default: Don't mail curator log to mgiadmin

TAG: vega_ensemblseqload-tr12070-BP
DATE: 11/2/2015
STAFF: lec
CHANGES:
1) branch point tag for TR12070/TR12116/Ensembl 82

TAG: vega_ensemblseqload-6-0-0-1
DATE: 07/24/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: vega_ensemblseqload-tr11750-MP
TAG: vega_ensemblseqload-tr11750-BP
DATE: 7/1/2015
STAFF: kstone/pf
CHANGES: break/merge point tags

TAG: vega_ensemblseqload-5-2-1-3
DATE: 01/16/2015
STAFF: sc
CHANGES: TR11890/VEGA 58
a) vega_proteinseqload.config, vega_transcriptseqload.config -
   updated SEQ_RELEASE_DATE

TAG: vega_ensemblseqload-5-2-1-2
DATE: 12/09/2014
STAFF: sc
CHANGES: TR11794/ENSEMBL 78
a) ensembl_proteinseqload.config, ensembl_transcriptseqload.config -
   updated SEQ_RELEASE_DATE

TAG: vega_ensemblseqload-5-2-1-1
DATE: 12/02/2014
STAFF: sc
CHANGES: TR11794/ENSEMBL 76
a) vega_proteinseqload.config, vega_transcriptseqload.config - 
   updated SEQ_RELEASE_DATE

TAG: vega_ensemblseqload-5-1-9-1
DATE: 08/11/2014
STAFF: lec
CHANGES: TR11716/VEGA 54
a) SEQ_RELEASE_DATE : vega_proteinseqload.config, vega_transcriptseqload.config

TAG: vega_ensemblseqload-5-1-6-1
DATE: 01/23/2014
STAFF: lec
CHANGES: TR11555/ensembl 74

TAG: vega_ensemblseqload-5-1-5-1
DATE: 12/03/2013
STAFF: lec
CHANGES: TR11528/vega 54

TAG: vega_ensemblseqload-5-1-4-1
DATE: 06/19/2013
STAFF: lec
CHANGES: TR11316/ensembl 72/vega 52

TAG: vega_ensemblseqload-5-1-1-1
DATE: 10/11/2012
STAFF: sc
CHANGES: CFAM/B38

TAG: vega_ensemblseqload-5-0-0-3
DATE: 10/11/2012