@@ -65,7 +65,7 @@ SEQ_JNUMBER=J:91388
 
 # release date - must be updated with each load and should match
 # that of assemblyload 
-SEQ_RELEASE_DATE=2016/02/10
+SEQ_RELEASE_DATE=2016/03/10
 
 # This is the sequence version in the database.
 # set to mouse build number
