@@ -1,3 +1,9 @@
+TAG: vega_ensemblseqload-6-0-3-2
+DATE: 03/21/2016
+STAFF: lec 
+CHANGES: 
+1) TR12220/ENSEMBL 83/84
+
 TAG: vega_ensemblseqload-6-0-3-1
 DATE: 03/03/2016
 STAFF: lec 
